ocm: ovis_r_ctrl - add a missing dependency
Add the missing '-lzap' dependency into LIBADD of ovis_r_ctrl.

Change-Id: I111cd5c4ce3102a94cec64e99056bece7320cbff

--- a/ocm/src/ovis_rctrl/Makefile.am
+++ b/ocm/src/ovis_rctrl/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES =
 
 libovis_rctrl_la_SOURCES = rctrl.c rctrl.h
 libovis_rctrl_la_LIBADD = ../ocm/libocm.la -lovis_util @OVIS_LIB_LIBDIR_FLAG@ \
-			  -lpthread -lovis_util
+			  -lpthread -lovis_util -lzap
 libovis_rctrl_la_CFLAGS = -I$(srcdir)/../ @OVIS_LIB_INCDIR_FLAG@
 
 if ENABLE_AUTH
