--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "util/libevent"]
 	path = util/libevent
 	url = https://github.com/libevent/libevent.git
+[submodule "sos"]
+	path = sos
+	url = gitlab@gitlab.ogc.us:tom/SOS.git
