baler: build rule clean-up and rpm
- Clean-up build rule
- Add rpm spec file

Change-Id: Ibc3384b2294a49bc9969704183ceaa17d30897e7

--- a/baler/dict/Makefile.am
+++ b/baler/dict/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = eng-dictionary
+
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/ovis
 	$(INSTALL_DATA) $(srcdir)/eng-dictionary $(DESTDIR)/$(prefix)/etc/ovis
