--- a/baler/src/tools/Makefile.am
+++ b/baler/src/tools/Makefile.am
@@ -3,11 +3,11 @@ bin_PROGRAMS =
 
 AM_CFLAGS = -I$(srcdir)/../
 
-bcsv2bnumvec_SOURCES = bcsv2bnumvec.c
+bcsv2bnumvec_SOURCES = bcsv2bnumvec.c bnum.h
 bcsv2bnumvec_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bcsv2bnumvec
 
-bnumvec_SOURCES = bnumvec.c
+bnumvec_SOURCES = bnumvec.c bnum.h
 bnumvec_LDADD = ../baler/libbaler.la -lpthread -lm
 bin_PROGRAMS += bnumvec
 
