baler: new msg store index
New message store idnex

Change-Id: I17ec9a0b011a434759b04bf7d9625fc50f117cd3

--- a/baler/src/query/Makefile.am
+++ b/baler/src/query/Makefile.am
@@ -3,12 +3,16 @@ BALER = ../baler
 
 bquery_SOURCES = bquery.c bquery.h bquery_priv.h
 bquery_CFLAGS = $(AM_CFLAGS) -DBIN @SOS_INCDIR_FLAG@
-bquery_LDADD = $(BALER)/libbaler.la -lsos @SOS_LIBDIR_FLAG@
+bquery_LDADD = $(BALER)/libbaler.la -lsos @SOS_LIBDIR_FLAG@ \
+	       ../plugins/libbsos_img.la \
+	       ../plugins/libbsos_msg.la
 
 bin_PROGRAMS = bquery
 
 libbquery_la_SOURCES = bquery.c bquery.h bquery_priv.h
 libbquery_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 libbquery_la_LDFLAGS = @SOS_LIBDIR_FLAG@ -Wl,-z,defs
-libbquery_la_LIBADD = $(BALER)/libbaler.la -lsos
+libbquery_la_LIBADD = $(BALER)/libbaler.la -lsos \
+		      ../plugins/libbsos_img.la \
+		      ../plugins/libbsos_msg.la
 lib_LTLIBRARIES = libbquery.la
