baler: bhquery python module
- Add Baler HTTPD query python module.
- Add a make rule to create an executable soft-link to use the module
  as a command.

Change-Id: Ic48f7bf1a22e2164a2592c83a6ecba1467163cfa

--- a/baler/swig/Makefile.am
+++ b/baler/swig/Makefile.am
@@ -2,10 +2,12 @@ INC = -I$(top_srcdir)/src -I@SOS_INCDIR@
 DEFS =
 
 BUILT_SOURCES = bquery.c bquery.py
-# SWIG_SOURCES =
-pkgpython_PYTHON = bquery.py __init__.py
+# SWIG_SOURCES
+pkgpython_PYTHON = bhquery.py __init__.py
+nodist_pkgpython_PYTHON = bquery.py
 pkgpyexec_LTLIBRARIES = _bquery.la
-_bquery_la_SOURCES = bquery.c bquery.i
+nodist__bquery_la_SOURCES = bquery.c
+_bquery_la_SOURCES = bquery.i
 _bquery_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) $(INC)
 _bquery_la_LDFLAGS = -module -shared $(PYTHON_LDFLAGS) @SOS_LIBDIR_FLAG@
 _bquery_la_LIBADD = $(top_builddir)/src/query/libbquery.la \
@@ -18,6 +20,13 @@ bquery.py: bquery.c
 
 bquery.c: bquery.i $(top_srcdir)/src/query/bquery.h
 	$(SWIG) $(SWIG_PYTHON_OPT) $(INC) -o $@ $<
+
+install-data-hook:
+	ln -sf $(pkgpythondir)/bhquery.py $(DESTDIR)$(bindir)/bhquery
+	chmod 755 $(DESTDIR)$(pkgpythondir)/bhquery.py
+
+uninstall-local:
+	rm -f $(DESTDIR)$(bindir)/bhquery
 
 clean-local:
 	rm -f bquery.c bquery.py
