baler: add python modules into RPM
Add python modules into Baler RPM

Change-Id: I060623b1e71a719f16687975050d2e73770b9988

--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -32,8 +32,6 @@ make %{?_smp_mflags}
 make install DESTDIR=%{buildroot}
 # remove unwanted .la files
 rm -f %{buildroot}%{_libdir}/*.la
-# remove python interface ... they're unmaintained
-rm -rf %{buildroot}%{_prefix}/lib/python*/
 
 %clean
 rm -rf %{buildroot}
@@ -42,6 +40,7 @@ rm -rf %{buildroot}
 %files
 %{_bindir}
 %{_libdir}
+%{_prefix}/lib
 %{_prefix}/etc
 
 
