lib: zap_rdma: Refactor for Zap version 1.3.0.0
Change-Id: Id1f20ca5b1dbbab404e43a72cd6bb8c0445c9e9a

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -72,6 +72,9 @@ OPTION_DEFAULT_DISABLE([ssl], [ENABLE_SSL])
 OPTION_DEFAULT_DISABLE([zaptest], [ENABLE_ZAPTEST])
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 
+OPTION_WITH([libibverbs], [libibverbs])
+OPTION_WITH([librdmacm], [librdmacm])
+
 dnl Swig stuff
 OPTION_DEFAULT_DISABLE([swig], [ENABLE_SWIG])
 if test -z "$ENABLE_SWIG_TRUE"
