libevent submodule to use gitlab.ogc.us repo
Change-Id: I45bcf615f25b3142e32c77a656e2f973b718234f

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "util/libevent"]
 	path = util/libevent
-	url = https://github.com/libevent/libevent.git
+	url = gitlab@gitlab.ogc.us:ovis/libevent.git
 [submodule "sos"]
 	path = sos
 	url = gitlab@gitlab.ogc.us:tom/SOS.git
