--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -19,10 +19,15 @@ lib_LTLIBRARIES += libstore_flatfile.la
 endif
 
 if ENABLE_CSV
-libstore_csv_la_SOURCES = store_csv.c
+libstore_csv_la_SOURCES = store_common.h store_csv.c
 libstore_csv_la_CFLAGS = $(AM_CFLAGS)
 libstore_csv_la_LIBADD = $(STORE_LIBADD)
 lib_LTLIBRARIES += libstore_csv.la
+
+libstore_derived_csv_la_SOURCES = store_common.h store_derived_csv.c
+libstore_derived_csv_la_CFLAGS = $(AM_CFLAGS)
+libstore_derived_csv_la_LIBADD = $(STORE_LIBADD)
+lib_LTLIBRARIES += libstore_derived_csv.la
 endif
 
 if ENABLE_ME
