spool for csv and derived.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -380,6 +380,8 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_local_procstatutil.sh
 		 scripts/ldms_local_csvorder.sh
 		 scripts/ldms_local_synthetic_test.sh
+		 scripts/ldms_local_rollspool_test.sh
+		 scripts/ldms_local_rollderspool.sh
 )
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
