--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -17,7 +17,7 @@ ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ldms_auth.h ldms_xprt_cmd.h
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h ldms_auth.c
 #libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
-			-lmmalloc -lcoll 
+			-lmmalloc -lcoll -lovis_util
 
 if ENABLE_AUTHENTICATION
 libldms_la_LIBADD += @OPENSSL_LIBS@
