ldms: fix Makefile for interlagos name cange

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -49,8 +49,8 @@ pkglib_LTLIBRARIES += libmeminfo.la
 endif
 
 if ENABLE_MSR_INTERLAGOS
-libmsr_la_SOURCES = msr_interlagos.c
-libmsr_la_LIBADD = $(COMMON_LIBADD)
+libmsr_interlagos_la_SOURCES = msr_interlagos.c
+libmsr_interlagos_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += libmsr_interlagos.la
 endif
 
