--- a/ldms/scripts/ldms_local_rollspool_test.sh.in
+++ b/ldms/scripts/ldms_local_rollspool_test.sh.in
@@ -116,7 +116,7 @@ echo "store name=store_csv comp_type=node set=meminfo spooler=mv spooldir=$SPOOL
 
 mysleep 60
 pkill ldmsd
-vgp="`pgrep -f valgrind.bin`"
+vgp="`pgrep -f valgrind`"
 echo vg is $vgp
 kill -SIGTERM $vgp
 sleep 1
