--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -37,3 +37,5 @@ bin_SCRIPTS += ldms_local_syslog.sh
 bin_SCRIPTS += ldms_local_synthetic_test.sh
 bin_SCRIPTS += ldms_local_rollspool_test.sh
 bin_SCRIPTS += ldms_local_rollderspool.sh
+
+bin_SCRIPTS += ldms_local_csvietf.sh
