--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -81,6 +81,15 @@ OPTION_DEFAULT_DISABLE([switchx], [ENABLE_SWITCHX])
 OPTION_WITH([switchx], [SWITCHX],[/usr/local])
 
 OPTION_DEFAULT_ENABLE([ldmsd], [ENABLE_LDMSD])
+OPTION_DEFAULT_DISABLE([a-none], [ENABLE_ANONE],[Allow "-a none" to turn off authentication checks.])
+if test "$enable_a_none" = "yes"; then
+	HAVE_ANONE=1
+	AC_DEFINE_UNQUOTED([HAVE_ANONE],[1],[ldmsd option "-a none" enabled at configure.])
+else
+	HAVE_ANONE=0
+fi
+AC_SUBST([HAVE_ANONE],[$HAVE_ANONE])
+
 
 dnl Other libraries
 OPTION_DEFAULT_DISABLE([gemini-gpcdr], [ENABLE_GEMINI_GPCDR]) dnl use gpcdr for gemini (not mutually exclusive)
@@ -325,6 +334,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_local_procstatutil.sh
 		 scripts/ldms_local_csvorder.sh
 		 scripts/ldms_local_synthetic_test.sh
+		 scripts/ldms_local_auth_test.sh
 )
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
