--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -35,5 +35,6 @@ bin_SCRIPTS += ldms_local_procstatutil.sh
 bin_SCRIPTS += ldms_local_syslog.sh
 
 bin_SCRIPTS += ldms_local_synthetic_test.sh
+bin_SCRIPTS += ldms_local_auth_test.sh
 
 endif
