Filter out -Werror flag from ldms swig makefile
The swig interface generator will generate C code that causes type
abuse warnings. If -Werror is set, it will break the build. This change allows
the user to specify -Werror in the configure CFLAGS

Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -1,3 +1,8 @@
+# swig generates code with type abuse which will fail to compile
+# with -Wall,-Werror. So remove the -Werror so that the warnings will
+# be but they don't kill the compile.
+CFLAGS := $(filter-out -Werror, ${CFLAGS})
+
 BUILT_SOURCES = ldms.c ldms.py
 SWIG_SOURCES = ldms.i $(top_srcdir)/src/core/ldms.h $(top_srcdir)/src/core/ldms_core.h
 pkgpython_PYTHON = ldms.py __init__.py
