lib: rpm7 - remove test_olog
Remove test_olog binary when building an RPM for RHEL7.

Change-Id: Ic4152a6e3411dabf75c9cc110cba1421fa71902f

--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -37,6 +37,7 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
 rm -f $RPM_BUILD_ROOT%{_bindir}/test_big_dstring
 rm -f $RPM_BUILD_ROOT%{_bindir}/test_dstring
 rm -f $RPM_BUILD_ROOT%{_bindir}/test_rman
+rm -f $RPM_BUILD_ROOT%{_bindir}/test_olog
 
 %clean
 rm -rf $RPM_BUILD_ROOT
